--- a/popup.html
+++ b/popup.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html>
 <head>
     <title>Text Converter</title>
@@ -7,8 +7,23 @@
 </head>
 <body>
     <div id="text-reader" contenteditable="true">
-        <textarea type="text" id="input-text"></textarea>
-        <button id="convert-button">Convert</button>
+        <div id="header">
+            <div id="logo_and_name">
+                <img src="icon.png">
+                <h1 id="title">Timex</h1>
+            </div>
+            <p id="version">2.0.0</p>
+        </div>
+        <div id="area-input-output">
+            <textarea type="text" id="input-text"></textarea>
+            <p id="response-text">this is a respons his is a respons his is a respons his is a respons his is a respons his is a respons his is a respons his is a respons his is a respons his is a respons his is a respons his is a respons his is a respons his is a respons his is a respons his is a respons v v his is a respons his is a respons his is a respons his is a response</p>
+
+        </div>
+        <div>
+            <div id="area-button">
+                <button id="convert-button" class="button-65">Timex-it</button>
+            </div>
+        </div>
     </div>
     <script src="popup.js"></script>
 </body>
