--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
 </head>
 </head>
 <body>
-    <div id="text-reader" contenteditable="true">
+    <div id="text-reader" contenteditable="false">
         <div id="header">
             <div id="logo_and_name">
                 <img src="icon.png">
@@ -15,8 +15,9 @@
             <p id="version">2.0.0</p>
         </div>
         <div id="area-input-output">
+<!--            <div id="clear">x</div>-->
             <textarea type="text" id="input-text"></textarea>
-            <p id="response-text">this is a respons his is a respons his is a respons his is a respons his is a respons his is a respons his is a respons his is a respons his is a respons his is a respons his is a respons his is a respons his is a respons his is a respons his is a respons his is a respons v v his is a respons his is a respons his is a respons his is a response</p>
+            <p id="response-text" ></p>
 
         </div>
         <div>
