--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,7 @@
         </div>
         <div id="area-input-output">
 <!--            <div id="clear">x</div>-->
-            <textarea type="text" id="input-text"></textarea>
+            <textarea type="text" id="input-text" placeholder="You can paste a function in whichever format you want. Just try me.. 😗"></textarea>
             <p id="response-text" ></p>
 
         </div>
