--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
     <div id="text-reader" contenteditable="false">
         <div id="header">
             <div id="logo_and_name">
-                <img src="icon.png">
+                <img src="assets/icon.png">
                 <h1 id="title">Timex</h1>
             </div>
             <p id="version">2.0.0</p>
