--- a/popup.html
+++ b/popup.html
@@ -4,12 +4,11 @@
     <title>Text Converter</title>
     <link rel="stylesheet" href="popup.css">
 </head>
-</head>
 <body>
     <div id="text-reader" contenteditable="false">
         <div id="header">
             <div id="logo_and_name">
-                <img src="assets/icon.png">
+                <img src="128.png" alt="icon">
                 <h1 id="title">Timex</h1>
             </div>
             <p id="version">2.0.0</p>
