new folder structure

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,5 +1,5 @@
 
-<html>
+<html lang="en-us">
 <head>
     <title>Text Converter</title>
     <link rel="stylesheet" href="popup.css">
@@ -8,14 +8,14 @@
     <div id="text-reader" contenteditable="false">
         <div id="header">
             <div id="logo_and_name">
-                <img src="128.png" alt="icon">
+                <img src="../assets/icon.png" alt="icon">
                 <h1 id="title">Timex</h1>
             </div>
             <p id="version">2.0.0</p>
         </div>
         <div id="area-input-output">
 <!--            <div id="clear">x</div>-->
-            <textarea type="text" id="input-text" placeholder="Enter your function here and let me do the rest! With just a few clicks, you'll get a quick and accurate estimate of its time complexity"></textarea>
+            <textarea id="input-text" placeholder="Enter your function here and let me do the rest! With just a few clicks, you'll get a quick and accurate estimate of its time complexity"></textarea>
             <p id="response-text" ></p>
 
         </div>
